--- a/options/options.html
+++ b/options/options.html
@@ -1,27 +1,39 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
 	<script src="../lib/jquery-3.1.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="options.css">
-    <title>Options page for 'SAML to AWS STS Keys Converter'</title>
-  </head>
-  <body>
+	<title>Options page for 'SAML to AWS STS Keys Converter'</title>
+</head>
+
+<body>
 	<div id="divTitle">
 		<div id="divIcon" class="inline-div"><img src="../icons/icon_128.png" alt="Icon" height="50" width="50"></div>
-		<div id="divHeader" class="inline-div"><h2>Options page for 'SAML to AWS STS Keys Converter'</h2></div>
+		<div id="divHeader" class="inline-div">
+			<h2>Options page for 'SAML to AWS STS Keys Converter'</h2>
+		</div>
 	</div>
 	<hr>
-	
+
 	<div id="divInfo">
 		<p>Developed by prolane.org (Gerard Laan)</p>
-		<p>For help, please see README at the <a href="https://github.com/prolane/samltoawsstskeys/blob/master/README.md" target="_blank">project page on Github.com</a></p>
+		<p>For help, please see README at the <a href="https://github.com/prolane/samltoawsstskeys/blob/master/README.md"
+				target="_blank">project page on Github.com</a></p>
 	</div>
-	
+
 	<div id="divSettings">
 		<div id="divFilename" class="setting-part">
-			<label>Filename for writing the fetched AWS STS keys. File will be written to Chrome's download directory. Example filename: credentials</label>
+			<label>Filename for writing the fetched AWS STS keys. File will be written to Chrome's download directory. Example
+				filename: credentials</label>
 			<br />
 			<input type="text" name="FileName" id="FileName" size="40">
+		</div>
+
+		<div id="divProfilename" class="setting-part">
+			<label>Profile name for fetched credentials. E.g : saml</label>
+			<br />
+			<input type="text" name="ProfileName" id="ProfileName" size="40">
 		</div>
 
 		<div id="divSessionDuration" class="setting-part">
@@ -40,20 +52,21 @@
 				<option value="no">no</option>
 			</select>
 		</div>
-		
+
 		<div id="divRoles" class="setting-part">
 			<label>[OPTIONAL]</label><br>
-			<label>Specify a list of Role ARN's. For each role the plugin will call the assume-role API. The fetched AWS STS keys will be added to the output file as separate profiles.</label>
+			<label>Specify a list of Role ARN's. For each role the plugin will call the assume-role API. The fetched AWS STS
+				keys will be added to the output file as separate profiles.</label>
 			<div id="role_arns" class="inline-div">
 			</div>
 		</div>
-		
+
 		<div id="divSave">
 			<div id="status" class="inline-div"></div>
 			<button id="save">Save</button>
 		</div>
 	</div>
 	<script src="options.js"></script>
-  </body>
-</html>
+</body>
 
+</html>
